--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,7 @@
 /* You'll want to make the site responsive and nice looking here. Have fun!*/
 
 html {
-	background-color: red;
+	background-color: blue;
 }
 
 .nav-bar-container {
