minor design change

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -52,7 +52,7 @@ table {
 /*=========Stylesheet===========*/
 
 body {
-	background:url('../img/halftone/halftone.png');
+	background:url('../img/bedge_grunge/bedge_grunge.png');
 	font-family: yo;
 	text-align: center;
 	line-height: 140%;
